# VozBot

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.beads/: issues.jsonl
.claude/god-ralph/: orchestrator-state.json
.claude/skills/ask-questions-if-underspecified/: SKILL.md
.claude/skills/auto-bug-tracking/: SKILL.md
.claude/skills/context-management/: SKILL.md
.claude/skills/dod-criteria/: SKILL.md
.claude/skills/git-workflow/: SKILL.md
.claude/skills/model-switching/: SKILL.md
.claude/skills/playwright-testing/: SKILL.md
.claude/skills/validation-before-close/: SKILL.md
.claude/skills/vozbot-project-workflow/: SKILL.md
static/audio/: README.md
tests/: __init__.py
tests/integration/: __init__.py  test_notification_integration.py  test_orchestrator_integration.py  test_transfer_fallback.py  test_twilio_integration.py
tests/unit/: __init__.py  test_dashboard.py  test_deepgram_adapter.py  test_deepgram_tts.py  test_escalation.py  test_llm_provider.py  test_notification_service.py  test_openai_provider.py  test_orchestrator.py  test_prompt_templates.py  test_search.py  test_state_machine.py  test_storage_models.py  test_stt_provider.py  test_telephony_adapter.py  test_tool_handlers.py  test_tool_schemas.py  test_transcript_service.py  test_tts_provider.py  test_twilio_adapter.py  test_twilio_webhooks.py
vozbot/: __init__.py  main.py
vozbot/agent/: __init__.py  escalation.py
vozbot/agent/orchestrator/: __init__.py  core.py  llm_base.py  openai_provider.py
vozbot/agent/tools/: schemas.py  (+2 more)
vozbot/dashboard/: __init__.py  app.py  search.py
vozbot/notifications/: __init__.py  service.py
vozbot/queue/: __init__.py
vozbot/speech/: __init__.py
vozbot/storage/: __init__.py
vozbot/telephony/: __init__.py
(+25 files in other folders)
